[package]
name = "rustcapture"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.185"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
pcap = "2"
ratatui = "0.28"
crossterm = "0.28"
